feat: add tigger

--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,13 @@
-*/**/.DS_Store
+.env*
 .DS_Store
-*/**/node_modules
-*/**/dist
-
-*/**/serverless
+**/node_modules
+**/.svelte-kit
+**/sqlite3vfs_httpdir_*
+**/sqlite3vfs_tmpdir_*
+**/httprange-test*
+**/diskcache-test*
+cmd/http/http
+cmd/tigger/tigger
+cmd/cli/cli
+**/*.db
+**/vfscache_*
