--- a/.github/workflows/build-image.yml
+++ b/.github/workflows/build-image.yml
@@ -25,10 +25,10 @@ jobs:
         echo "::set-output name=time::$(date +'%Y%m%d%H')"
 
     - name: Build
-      run: go mod tidy && go build .
+      run: go mod tidy && cd cmd/http && go build .
 
     - name: Test
-      run: go build . && go test -v .
+      run: go test ./...
 
     - name: Set up Docker Buildx
       uses: docker/setup-buildx-action@v1
